manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "aksdev33442-41d6"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "aksdev33442-41d6"
  template:
    metadata:
      labels:
        app: "aksdev33442-41d6"
    spec:
      containers:
        - name: "aksdev33442-41d6"
          image: "discordtemp.azurecr.io/aksdev33442"
          ports:
          - containerPort: 21025
