manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "aksdev33442-41d6"
    labels:
        app: "aksdev33442-41d6"
spec:
    type: ClusterIP
    ports:
    - port: 21025
      targetPort: 21025
      protocol: TCP
      name: http
    selector:
        app: "aksdev33442-41d6"
